cc: Add LayerTreeSetting to disable cached picture raster.

PictureImageLayer currently uses cached picture by default since it was
used by GatherPixelRefs. This is no longer necessary since we now use
GenerateDiscardableImagesMetadata in DisplayItemList to build the image
map, which supports both modes.

BUG=597163
CQ_INCLUDE_TRYBOTS=tryserver.blink:linux_blink_rel

Review URL: https://codereview.chromium.org/1835523002

Cr-Commit-Position: refs/heads/master@{#384346}

Former-commit-id: 8e17a5b61e3e9a14939ebc10a152e108c2a0ba07